Remove the unnecessary blockquote after indenting an empty blockquote

Here is a DOM state when we only add a blockquote.
<div contenteditable><blockquote>|<br></blockquote></div>

After indenting the blockquote, the change is as follows:
<div contenteditable>
  <blockquote>
    <blockquote style="margin: 0 0 0 40px; border: none; padding: 0px;">
      <blockquote>|<br></blockquote>
    </blockquote>
  </blockquote>
</div>

There is an unnecessary blockquote so the result should be as follows:

<div contenteditable>
  <blockquote style="margin: 0 0 0 40px; border: none; padding: 0px;">
    <blockquote>|<br></blockquote>
  </blockquote>
</div>

This CL removes the additional blockquote.

BUG=625802
TEST=editing/execCommand/indent-empty-quote.html

Review-Url: https://codereview.chromium.org/2175433002
Cr-Commit-Position: refs/heads/master@{#407091}

Former-commit-id: b844ddd6c6b82784257c183e50244eff895bce09